--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [alias]
 	st = status
 	ci = commit
-	br = branch
+	br = branch -v
 	co = checkout
 	d = difftool --dir-diff --no-symlinks
 	l = log --graph --stat
